--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,12 @@
-
+<!--
+可以修改 HTML，比如：
+1. title
+2. meta 信息
+3. css 和 js，包括内联和外链，包括各种位置（有些在 head，有些在 body，有些在 dom 前，有些在 dom 后）
+4. preload 和 prefetch
+5. publicPath 的处理
+6. base 的配置
+7. 和后端框架的结合
+8. ...
+ -->
 <div id="root"></div>
